# GenAI

./: .gitignore  activate.sh  requirements.txt  setup_venv.sh  update_requirements.sh
1-Pydantic/: intro.ipynb
3-langGraphTools/: chatbotMultipleTools.ipynb
LangGraph-Basics/: simpleGraph.ipynb
Phase2/: pyproject.toml  requirements.txt
Phase2/1-BasicChatbot/: 1-basicChatbot.ipynb
Phase2/mcpLangchain/: client.py  mathserver.py  weather.py
RAG/Agentic_RAG/AgentiRAG_DiscordBot_CAMEL-AL/: .gitignore  Agentic_RAG_Discord_Bot_with_CAMEL_AI.ipynb  discordBot_CAMEL-AI.py  requirements.txt
RAG/Agentic_RAG/AgentiRAG_HybridSearch_VS_KG/: README.md
RAG/Agentic_RAG/Qdrant/: QdrantAgent.py  readme.md
RAG/Agentic_RAG/crawl4AI_agent/: README.md  crawl_pydantic_ai_docs.py  pipeline_steps.md  pydantic_ai_expert.py  site_pages.sql  streamlit_ui.py
RAG/Agentic_RAG/crawl4AI_agent/crawl4AI-examples/: 1-crawl_single_page.py  2-crawl_docs_sequential.py  3-crawl_docs_FAST.py
RAG/RAG_with_LangGraph/: README.md  rag.ipynb
RAG/SimpleRAG/: README.md  simple_rag.py  test_simple_rag.py
RAG/Simple_RAG/: README.md  config.py  example.py
